fixed div alignment signin and signup, longer route animation

--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -8,11 +8,9 @@
   margin-bottom: 10px;
 }
 
-mat-card {
-  position: fixed;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.content {
+  margin-left: auto;
+  margin-right: auto;
   width: 400px;
 }
 
